--- a/src/index.jade
+++ b/src/index.jade
@@ -5,10 +5,12 @@ html(lang="en", ng-app="%module%")
     title Atom Angular Boilerplate
     meta(charset="utf-8")
     link(rel="icon", type="image/x-icon", href="/favicon.ico")
+    link(rel="stylesheet", href="%styles%/vendor.css")
     link(rel="stylesheet", href="%styles%/app.css")
     meta(name="viewport", content="initial-scale=1.0, width:device-width")
   body
     ui-view
     script(src="%scripts%/vendor.js")
+    script(src="http://www.parsecdn.com/js/parse-1.4.2.min.js")
     script(src="%scripts%/app.js")
     script(src="%scripts%/templates.js")
